server/deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quick-share
  labels:
    name: quick-share
